--- a/template/vpc-ec2-asg-elb.yaml
+++ b/template/vpc-ec2-asg-elb.yaml
@@ -1,8 +1,11 @@
-Description:  This template deploys a VPC, with 2 AZs and a public and private subnet on each AZ. It deploys an internet gateway, with a default
-  route on the public subnets. It deploys NAT gateways (one in each AZ), and default routes for them in the private subnets.
-  It deploys an EC2 instance in each private subnet, with a simple web page that displays the AZ of the instance. 
-  It deploys an Application Load Balancer that will distribute traffic between the two EC2 instances.
-  The template also creates the necessary security groups for the EC2 instances and the Application Load Balancer.
+Description:  This template deploys the following resources
+  VPC, with 2 AZs and a public and private subnet on each AZ.
+  Internet gateway, with a default route on the public subnets.  
+  NAT gateways (one in each AZ), and default routes for them in the private subnets.
+  EC2 instance in each private subnet, with a simple web page that displays the AZ of the instance.
+  Application Load Balancer that will distribute traffic between the EC2 instances.
+  Auto Scaling Group that will maintain the desired number of EC2 instances depending on the load. 
+  Security groups for the EC2 instances and the Application Load Balancer.
 
 #Parameters to be passed to the template at the time of deployment. 
 #You can pass these parameters through the AWS Management Console, AWS CLI, or AWS SDKs.
@@ -48,7 +51,7 @@ Parameters:
       - t2.small
       - t2.medium
       - t2.large
-    ConstraintDescription: must be a valid EC2 instance type.
+    ConstraintDescription: Mst be a valid EC2 instance type.
 
 #Mappings are used to map keys to corresponding values that are used in the template depending on the region where the stack is being created.
 #In this template, we are using a mapping to map the region to the AMI ID of Amazon Linux 2023
@@ -68,7 +71,7 @@ Mappings:
 #All the resources are tagged with the project name to easily identify them in the AWS Management Console and for billing purposes.
 Resources:
 
-  # VPC resource creates a VPC with the specified CIDR block. DNS hostnames and DNS support is enabled
+  # VPC resource creates a virtual network with the specified CIDR block. DNS hostnames and DNS support is enabled
   VPC:
     Type: AWS::EC2::VPC
     Properties:
@@ -77,15 +80,15 @@ Resources:
       EnableDnsHostnames: true
       Tags:
       - Key: Name
-        Value: !Sub ${ProjectName} VPC
+        Value: !Sub ${ProjectName}-VPC
 
-  # InternetGateway resource creates an internet gateway.
+  # InternetGateway resource creates an internet gateway for internet access to the VPC.
   InternetGateway:
     Type: AWS::EC2::InternetGateway
     Properties:
       Tags:
       - Key: Name
-        Value: !Sub ${ProjectName} IGW
+        Value: !Sub ${ProjectName}-IGW
 
   # VPCGatewayAttachment resource attaches the internet gateway to the VPC.
   InternetGatewayAttachment:
@@ -109,7 +112,7 @@ Resources:
       MapPublicIpOnLaunch: true
       Tags:
         - Key: Name
-          Value: !Sub ${ProjectName} Public Subnet (AZ1)
+          Value: !Sub ${ProjectName}-Public-Subnet-AZ1
 
   # PrivateSubnet resource creates a private subnet in the VPC
   #The instance launched in this subnet will not have a public IP address assigned to it. 
@@ -123,7 +126,7 @@ Resources:
       MapPublicIpOnLaunch: false
       Tags:
         - Key: Name
-          Value: !Sub ${ProjectName} Private Subnet (AZ1)
+          Value: !Sub ${ProjectName}-Private-Subnet-AZ1
 
   #We need to create a public subnet in the second Availability Zone for high availability and fault tolerance.
   PublicSubnet2:
@@ -135,7 +138,7 @@ Resources:
       MapPublicIpOnLaunch: true
       Tags:
         - Key: Name
-          Value: !Sub ${ProjectName} Public Subnet (AZ2)
+          Value: !Sub ${ProjectName}-Public-Subnet-AZ2
 
   #We need to create a private subnet in the second Availability Zone for high availability and fault tolerance.
   PrivateSubnet2:
@@ -147,7 +150,7 @@ Resources:
       MapPublicIpOnLaunch: false
       Tags:
         - Key: Name
-          Value: !Sub ${ProjectName} Private Subnet (AZ2)
+          Value: !Sub ${ProjectName}-Private-Subnet-AZ2
   
   # Elastic IP for the Nat Gateway in AZ1
   # This is used to assign a static IP address to the NAT Gateway in the first Availability Zone.
@@ -158,7 +161,7 @@ Resources:
       Domain: vpc
       Tags:
         - Key: Name
-          Value: !Sub ${ProjectName} Elastic IP for Nat Gateway (AZ1)
+          Value: !Sub ${ProjectName}-ElasticIP-AZ1
 
   # Elastic IP for the Nat Gateway in AZ2
   # This is used to assign a static IP address to the NAT Gateway in the second Availability Zone.
@@ -169,10 +172,10 @@ Resources:
       Domain: vpc
       Tags:
         - Key: Name
-          Value: !Sub ${ProjectName} Elastic IP for Nat Gateway (AZ2)
+          Value: !Sub ${ProjectName}-ElasticIP-AZ2
 
   # Nat Gateway in the first Availability Zone.
-  # The NAT Gateway 1 needs to be created in the public subnet.
+  # The NAT Gateway 1 needs to be created in the public subnet 1.
   # This is used to provide internet access to the instance in the private subnet in the first Availability Zone.
   NatGateway1:
     Type: AWS::EC2::NatGateway
@@ -181,10 +184,10 @@ Resources:
       SubnetId: !Ref PublicSubnet1
       Tags:
         - Key: Name
-          Value: !Sub ${ProjectName} Nat Gateway (AZ1)
+          Value: !Sub ${ProjectName}-Nat-Gateway-AZ1
 
   # Nat Gateway in the second Availability Zone
-  # The NAT Gateway 2 needs to be created in the public subnet.
+  # The NAT Gateway 2 needs to be created in the public subnet 2.
   # This is used to provide internet access to the instance in the private subnet in the second Availability Zone.
   NatGateway2:
     Type: AWS::EC2::NatGateway
@@ -193,7 +196,7 @@ Resources:
       SubnetId: !Ref PublicSubnet2
       Tags:
         - Key: Name
-          Value: !Sub ${ProjectName} Nat Gateway (AZ2)
+          Value: !Sub ${ProjectName}-Nat-Gateway-AZ2
 
   # RouteTable resource creates a route table for the VPC
   # This route table will be associated with the public subnets to define the routing rules for the traffic.
@@ -203,7 +206,7 @@ Resources:
       VpcId: !Ref VPC
       Tags:
         - Key: Name
-          Value: !Sub ${ProjectName} Public Route Table
+          Value: !Sub ${ProjectName}-Public-Route-Table
 
   # PublicRoute resource creates a route in the route table to the internet gateway, allowing traffic to flow to the Internet.
   #The DestinationCidrBlock is set to 0.0.0.0/0, which is the CIDR block that matches all IP addresses. 
@@ -235,7 +238,7 @@ Resources:
       VpcId: !Ref VPC
       Tags:
         - Key: Name
-          Value: !Sub ${ProjectName} Private Route Table (AZ1)
+          Value: !Sub ${ProjectName}-Private-Route-Table-AZ1
 
   # PrivateRoute resource creates a route in the route table to the NAT Gateway, allowing traffic to flow from the private subnet to the Internet.
   # This means that the instances in the private subnet can access the Internet through the NAT Gateway.
@@ -260,7 +263,7 @@ Resources:
       VpcId: !Ref VPC
       Tags:
         - Key: Name
-          Value: !Sub ${ProjectName} Private Route Table (AZ2)
+          Value: !Sub ${ProjectName}-Private-Route-Table-AZ2
 
   # We need to create a route in the route table to the NAT Gateway in the second Availability Zone.
   PrivateRoute2:
@@ -277,13 +280,13 @@ Resources:
       RouteTableId: !Ref PrivateRouteTable2
       SubnetId: !Ref PrivateSubnet2
 
-  # ELB Security Groups creates a security group that allows all traffic from the internet
+  # ALB Security Groups creates a security group that allows all traffic from the internet
   # ‘SecurityGroupIngress’ is used to specify the ingress (incoming) rules for the security group. 
   # This security group will be used by the Application Load Balancer to allow traffic on port 80 from anywhere in the internet.
-  ELBSecurityGroup:
+  ALBSecurityGroup:
     Type: AWS::EC2::SecurityGroup
     Properties:
-      GroupDescription: ELB Security Group
+      GroupDescription: ALB Security Group
       VpcId: !Ref VPC
       SecurityGroupIngress:
       - IpProtocol: tcp
@@ -292,10 +295,10 @@ Resources:
         CidrIp: 0.0.0.0/0
       Tags:
         - Key: Name
-          Value: !Sub ${ProjectName} ELB Security Group
+          Value: !Sub ${ProjectName}-ALB-Security-Group
 
   # EC2SecurityGroup allows you to specify which traffic is allowed to reach the instances that belong to this security group.
-  # In this case, we are allowing traffic on port 80 from the ELB Security Group.
+  # In this case, we are allowing traffic on port 80 from the ALB Security Group.
   EC2SecurityGroup:
     Type: AWS::EC2::SecurityGroup
     Properties:
@@ -307,62 +310,73 @@ Resources:
         ToPort: 80
         SourceSecurityGroupId:
           Fn::GetAtt:
-          - ELBSecurityGroup
+          - ALBSecurityGroup
           - GroupId
       Tags:
         - Key: Name
-          Value: !Sub ${ProjectName} EC2 Security Group
+          Value: !Sub ${ProjectName}-EC2-Security-Group
 
-  #EC2 Instance to be launched in the first private subnet
-  #EC2 instance will act as a web server serving up a simple website that displays the Availability Zone of the instance.
+  # LaunchTemplate resource creates a launch template that specifies the configuration of the EC2 instances that will be launched by the Auto Scaling Group.
   #The image ID is selected based on the region where the stack is being created using the RegionMap mapping.
   #The instance type is specified as a parameter when you lunch the stack.
-  #The security group is set to the EC2SecurityGroup that allows traffic from the ELB Security Group on port 80.
-  #Thee user data script installs Apache web server and creates a simple web page that displays the Availability Zone of the instance.
-  EC2Instance1:
-    Type: AWS::EC2::Instance
+  #The security group is set to the EC2SecurityGroup that allows traffic from the ALB Security Group on port 80.
+  #The user data script installs Apache web server and creates a simple web page that displays the Availability Zone of the instance.
+  LaunchTemplate:
+    Type: AWS::EC2::LaunchTemplate
     Properties:
-      ImageId: !FindInMap [RegionMap, !Ref "AWS::Region", AMI] 
-      InstanceType: !Ref InstanceType
-      SecurityGroupIds:
-        - !Ref EC2SecurityGroup
-      SubnetId: !Ref PrivateSubnet1
-      Tags:
-        - Key: Name
-          Value: !Sub ${ProjectName} EC2 Instance 1
-      UserData: 
-        Fn::Base64: !Sub |
-          #!/bin/bash
-          yum update -y
-          yum install -y httpd
-          systemctl start httpd
-          systemctl enable httpd
-          EC2AZ=$(TOKEN=`curl -X PUT "http://169.254.169.254/latest/api/token" -H "X-aws-ec2-metadata-token-ttl-seconds: 21600"` && curl -H "X-aws-ec2-metadata-token: $TOKEN" -v http://169.254.169.254/latest/meta-data/placement/availability-zone)
-          echo '<center><h1>This Amazon EC2 instance is located in Availability Zone: AZID </h1></center>' > /var/www/html/index.txt
-          sed "s/AZID/$EC2AZ/" /var/www/html/index.txt > /var/www/html/index.html
+      LaunchTemplateName: !Sub "${ProjectName}-LaunchTemplate"
+      LaunchTemplateData:
+        ImageId: !FindInMap [RegionMap, !Ref "AWS::Region", AMI] 
+        InstanceType: !Ref InstanceType
+        SecurityGroupIds:
+          - !Ref EC2SecurityGroup
+        UserData: 
+          Fn::Base64: !Sub |
+            #!/bin/bash
+            yum update -y
+            yum install -y httpd
+            systemctl start httpd
+            systemctl enable httpd
+            EC2AZ=$(TOKEN=`curl -X PUT "http://169.254.169.254/latest/api/token" -H "X-aws-ec2-metadata-token-ttl-seconds: 21600"` && curl -H "X-aws-ec2-metadata-token: $TOKEN" -v http://169.254.169.254/latest/meta-data/placement/availability-zone)
+            echo '<center><h1>This Amazon EC2 instance is located in Availability Zone: AZID </h1></center>' > /var/www/html/index.txt
+            sed "s/AZID/$EC2AZ/" /var/www/html/index.txt > /var/www/html/index.html
 
-  #EC2 Instance to be launched in the second private subnet for high availability and fault tolerance.
-  EC2Instance2:
-    Type: AWS::EC2::Instance
+  # AutoScalingGroup resource creates an Auto Scaling Group that will maintain the desired number of EC2 instances depending on the load.
+  # The instances will be launched in the private subnets within two AZs using the launch template that we created earlier.
+  AutoScalingGroup:
+    Type: AWS::AutoScaling::AutoScalingGroup
     Properties:
-      ImageId: !FindInMap [RegionMap, !Ref "AWS::Region", AMI] 
-      InstanceType: !Ref InstanceType
-      SecurityGroupIds:
-        - !Ref EC2SecurityGroup
-      SubnetId: !Ref PrivateSubnet2
+      AvailabilityZones:
+        - !Select [ 0, !GetAZs '' ]
+        - !Select [ 1, !GetAZs '' ]
+      VPCZoneIdentifier:
+        - !Ref PrivateSubnet1
+        - !Ref PrivateSubnet2
+      LaunchTemplate:
+        LaunchTemplateId: !Ref LaunchTemplate
+        Version: !GetAtt LaunchTemplate.LatestVersionNumber
+      HealthCheckGracePeriod: 300 # The amount of time, in seconds, after an instance comes into service before checking its health
+      HealthCheckType: ELB        # The service to use for the health checks. Here we are using the Application Load Balancer
+      MinSize: 2                  # The minimum number of instances in the Auto Scaling Group
+      MaxSize: 4                  # The maximum number of instances in the Auto Scaling Group
+      DesiredCapacity: 2          # The desired number of instances in the Auto Scaling Group   
+      TargetGroupARNs:
+        - !Ref EC2TargetGroup     # The target group of the ALB to associate with the instances in the Auto Scaling Group
       Tags:
         - Key: Name
-          Value: !Sub ${ProjectName} EC2 Instance 2
-      UserData: 
-        Fn::Base64: !Sub |
-          #!/bin/bash
-          yum update -y
-          yum install -y httpd
-          systemctl start httpd
-          systemctl enable httpd
-          EC2AZ=$(TOKEN=`curl -X PUT "http://169.254.169.254/latest/api/token" -H "X-aws-ec2-metadata-token-ttl-seconds: 21600"` && curl -H "X-aws-ec2-metadata-token: $TOKEN" -v http://169.254.169.254/latest/meta-data/placement/availability-zone)
-          echo '<center><h1>This Amazon EC2 instance is located in Availability Zone: AZID </h1></center>' > /var/www/html/index.txt
-          sed "s/AZID/$EC2AZ/" /var/www/html/index.txt > /var/www/html/index.html
+          Value: !Sub ${ProjectName}-Instance
+          PropagateAtLaunch: true
+
+  # ScalingPolicy resource creates a target tracking scaling policy for the Auto Scaling Group.
+  ScalingPolicy:
+    Type: AWS::AutoScaling::ScalingPolicy
+    Properties:
+      AutoScalingGroupName: !Ref AutoScalingGroup
+      PolicyType: TargetTrackingScaling
+      TargetTrackingConfiguration:
+        PredefinedMetricSpecification:
+          PredefinedMetricType: ASGAverageCPUUtilization    # The metric type to use for the target tracking scaling policy
+        TargetValue: 50.0                                   
 
   # Target Group for the Application Load Balancer
   # This sets up a target group for the ALB to route HTTP traffic on port 80 to the two EC2 instances, with health checks to ensure the instances are healthy.
@@ -380,14 +394,12 @@ Resources:
       Protocol: HTTP                  # The protocol to use for routing traffic to the targets
       TargetGroupAttributes:
       - Key: deregistration_delay.timeout_seconds # The amount of time, in seconds, for Elastic Load Balancing to wait before changing the state of a deregistering target from draining to unused
-        Value: '20'                   
-      Targets:                        # The list of targets (EC2 instances) to register with the target group
-      - Id: !Ref EC2Instance1      
-        Port: 80
-      - Id: !Ref EC2Instance2
-        Port: 80
+        Value: '20'  
       UnhealthyThresholdCount: 3      # The number of consecutive failed health checks required before considering a target unhealthy
       VpcId: !Ref VPC
+      Tags:
+        - Key: Name
+          Value: !Sub ${ProjectName}-Target-Group
 
   # ALBListener resource creates a listener for the Application Load Balancer
   # The listener listens on port 80 and forwards traffic to the target group that we created earlier.
@@ -404,7 +416,7 @@ Resources:
   # ApplicationLoadBalancer resource creates an Application Load Balancer
   # The Application Load Balancer distributes incoming application traffic across the EC2 instances.
   # The Application Load Balancer is set to internet-facing and is associated with the public subnets.
-  # The security group is set to the ELBSecurityGroup that allows traffic from the internet on port 80.
+  # The security group is set to the ALBSecurityGroup that allows traffic from the internet on port 80.
   ApplicationLoadBalancer:
     Type: AWS::ElasticLoadBalancingV2::LoadBalancer
     Properties:
@@ -413,7 +425,10 @@ Resources:
       - !Ref PublicSubnet1
       - !Ref PublicSubnet2
       SecurityGroups:
-        - !GetAtt ELBSecurityGroup.GroupId
+        - !GetAtt ALBSecurityGroup.GroupId
+      Tags:
+        - Key: Name
+          Value: !Sub ${ProjectName}-Application-Load-Balancer
 
 # Outputs section of the template allows you to define the outputs of the template that you want to be displayed after the stack is created.
 # In this template, we are outputting the URL of the website that is served by the Application Load Balancer.
